Added Department Delete

--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -60,8 +60,21 @@
                                             <td>{{ item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
 
                                             <td>
+                                              <button type="button" class="btn btn-success btn-xs" (click)="onEdit(item.id)">
+                                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                                              </button>
+                                              <button *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '1'" type="button" class="btn btn-warning btn-xs" (click)="blockUser(item.id)">
+                                                <i class="fa fa-lock" aria-hidden="true"></i>
+                                              </button>
+                                              <button *ngIf="item.twilio_info?.twilio_sid && item.profile_status == '2'" type="button" class="btn btn-warning btn-xs" (click)="UnblockUser(item.id)">
+                                                <i class="fa fa-unlock" aria-hidden="true"></i>
+                                              </button>
+                                              <button *ngIf="!item.twilio_info?.twilio_sid" type="button" class="btn btn-success btn-xs" (click)="createTwilioSid(item.id)">
+                                                <i class="fa fa-retweet" aria-hidden="true"></i>
+                                              </button>
+
                                                 <!-- Single button -->
-                                                <div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
+                                                <!--<div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
                                                     <button type="button" class="btn btn-default dropdown-toggle"
                                                             data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -84,7 +97,7 @@
                                                                 class="fa fa-retweet" aria-hidden="true"></i>Create SID</a>
                                                         </li>
                                                     </ul>
-                                                </div>
+                                                </div>-->
                                             </td>
                                         </tr>
                                         </tbody>
