--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -55,12 +55,10 @@
                                                 <!--</button>-->
                                                 <button type="button" class="btn btn-warning btn-xs" (click)="onEdit(item.id)">
                                                     <i class="fa fa-pencil" aria-hidden="true"></i>
-                                                     Edit
                                                 </button>
-                                                <!--<button type="button" class="btn btn-danger btn-xs">-->
-                                                    <!--<i class="fa fa-trash" aria-hidden="true"></i>-->
-                                                     <!--Delete-->
-                                                <!--</button>-->
+                                                <button type="button" class="btn btn-danger btn-xs" (click)="preDelete(item.id, template)">
+                                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                                </button>
                                             </td>
                                         </tr>
                                         </tbody>
@@ -91,4 +89,53 @@
         </div>
         <!-- /.row -->
     </section>
+  <ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Department CheckList</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <div class="row" *ngIf="deleteCheckList['agents'] !== undefined && deleteCheckList['agents'].length > 0">
+        <div class="col-md-12">
+          <div class="col-md-8">
+          <h5>Following departments will be free after deleting the agent :</h5>
+        </div>
+          <div class="col-md-4">
+            <div class="row" *ngFor="let department of deleteCheckList['agents']">
+              <div class="col-md-12">
+                <h5>{{ department.first_name + ' ' + department.last_name}}</h5>
+              </div>
+            </div>
+        </div>
+        </div>
+      </div>
+      <div class="row" *ngIf="deleteCheckList['widgets'] !== undefined && deleteCheckList['widgets'].length > 0">
+        <div class="col-md-12">
+          <div class="col-md-8">
+            <h5>Following widgets will be free after deleting the agent :</h5>
+          </div>
+          <div class="col-md-4">
+            <div class="row" *ngFor="let widgets of deleteCheckList['widgets']">
+              <div class="col-md-12">
+                <h5>{{ widgets.website }}</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" *ngIf="deleteCheckList['isSingleDepartmentWidgets']">
+        <div class="col-md-12">
+          <h4>There is some single department widgets so please first make the department free. Then Delete it.</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <button class="btn btn-warning btn-lg pull-right" [disabled]="deleteCheckList['isSingleDepartmentWidgets']" (click)="deleteDepartment(deleteCheckList.department.id)">Delete</button>
+          <button class="btn btn-success btn-lg" aria-label="Close" (click)="bsModalRef.hide()">Skip</button>
+        </div>
+      </div>
+    </div>
+  </ng-template>
 </div>
