--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -67,8 +67,14 @@
                                             <td>{{ item.widget_department | slice:0:120 }}</td>
                                             <td>{{ item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
                                             <td>
+                                              <button type="button" class="btn btn-warning btn-xs" (click)="onEditWidget(item.id)">
+                                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                                              </button>
+                                              <button type="button" class="btn btn-danger btn-xs" (click)="DeleteWidget(item.id)">
+                                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                              </button>
                                                 <!-- Single button -->
-                                                <div class="btn-group" [appDropdown]="'open'" disable-hover="true">
+                                                <!--<div class="btn-group" [appDropdown]="'open'" disable-hover="true">
                                                     <button type="button" class="btn btn-default dropdown-toggle"
                                                             data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -80,7 +86,7 @@
                                                         </li>
                                                       <li> <a (click)="DeleteWidget(item.id)"><i class="fa fa-times" aria-hidden="true"></i>Delete</a> </li>
                                                     </ul>
-                                                </div>
+                                                </div>-->
                                             </td>
                                         </tr>
                                         </tbody>
