--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -50,7 +50,8 @@
                     </div>
                   </ng-template>
                   <input type="hidden" [ngModel]="dep.userId" id="admin" name="userId" #selected>
-                  <div class="col-md-6" *ngIf="selected.value > 0">
+
+                  <div class="col-md-5" *ngIf="selected.value > 0">
                     <div class="form-group">
                       <label class="control-label" for="agents">
                         Select Agents
@@ -77,6 +78,12 @@
                       <!--</select>-->
                     </div>
                   </div>
+                    <div class="col-md-1 createAgentBtn"  *ngIf="selected.value > 0">
+                        <div class="form-group">
+                            <button class="btn btn-primary" type="button" (click)="CreateAgent(template)" id="createAgent"><i class="fa fa-plus"> </i> Create Agent</button>
+                        </div>
+                    </div>
+
                 </div>
               </div>
               <div class="col-md-6" *ngIf="selected.value > 0">
@@ -139,5 +146,120 @@
       <!-- /.col -->
     </div>
     <!-- /.row -->
+      <ng-template #template>
+          <div class="modal-header">
+              <h4 class="modal-title pull-left">Create Agent </h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <form #form="ngForm">
+                  <input type="hidden"
+                         id="parentId"
+                         name="parentId"
+                         [ngModel]="dep.userId"
+                         #userId="ngModel">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="form-group" [ngClass]="(firstName.invalid && firstName.touched) ? 'has-error': ''">
+                              <label class="control-label" for="firstName">First Name
+                                  <i *ngIf="firstName.invalid && firstName.touched" class="fa fa-times-circle-o"></i>
+                              </label>
+                              <input type="text"
+                                     class="form-control"
+                                     id="firstName"
+                                     name="firstName"
+                                     [ngModel]="agent.firstName"
+                                     #firstName="ngModel"
+                                     required
+                                     placeholder="First Name"
+                              >
+                              <span *ngIf="firstName.invalid && firstName.touched" class="help-block">Your First Name is Required !</span>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group" [ngClass]="(lastName.invalid && lastName.touched) ? 'has-error': ''">
+                              <label class="control-label" for="lastName">Last Name
+                                  <i *ngIf="lastName.invalid && lastName.touched" class="fa fa-times-circle-o"></i>
+                              </label>
+                              <input type="text"
+                                     class="form-control"
+                                     id="lastName"
+                                     name="lastName"
+                                     [ngModel]="agent.lastName"
+                                     #lastName="ngModel"
+                                     required
+                                     placeholder="Last Name"
+                              >
+                              <span *ngIf="lastName.invalid && lastName.touched"
+                                    class="help-block">Your Last Name is Required !</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="form-group" [ngClass]="(email.invalid && email.touched) ? 'has-error': ''">
+                              <label class="control-label input-label-toggel" for="email">Email
+                                  <i *ngIf="email.invalid && email.touched" class="fa fa-times-circle-o"></i>
+                              </label>
+                              <input type="email"
+                                     class="form-control input-box-toggel"
+                                     id="email"
+                                     name="email"
+                                     [ngModel]="agent.email"
+                                     #email="ngModel"
+                                     email
+                                     required
+                                     placeholder="email"
+                              >
+                              <div class="row filterSubmit">
+                                  <label class="switch">
+                                      <input type="checkbox" name="isEmailNotification" [(ngModel)]="agent.isemailNotification" [checked]="isemailNotification">
+                                      <span class="slider"></span>
+                                  </label>
+                              </div>
+
+                              <span *ngIf="email.invalid && email.touched && form.controls.email?.errors.email"
+                                    class="help-block">Please Enter a Proper Email Address!</span>
+                              <span *ngIf="email.invalid && email.touched && form.controls.email?.errors.required"
+                                    class="help-block">Your Email Address is Required!</span>
+                          </div>
+                        </div>
+                          <div class="col-md-6">
+                              <div class="form-group" [ngClass]="(phone.invalid && phone.touched) ? 'has-error': ''">
+                                  <label class="control-label input-label-toggel" for="phone">Phone
+                                      <i *ngIf="phone.invalid && phone.touched" class="fa fa-times-circle-o"></i>
+                                  </label>
+                                  <input type="text"
+                                         class="form-control input-box-toggel"
+                                         [textMask]="{mask: mask, guide: false}"
+                                         id="phone"
+                                         placeholder="phone"
+                                         [ngModel]="agent.phone"
+                                         name="phone"
+                                         required
+                                         ngModel
+                                         #phone="ngModel"
+                                  >
+                                  <div class="row filterSubmit">
+                                      <label class="switch">
+                                          <input type="checkbox" name="isPhoneNotification" [(ngModel)]="agent.isPhoneNotification" [checked]="isPhoneNotification">
+                                          <span class="slider"></span>
+                                      </label>
+                                  </div>
+                                  <span *ngIf="phone.invalid && phone.touched"
+                                        class="help-block">Your Phone Number is Required !</span>
+                              </div>
+                          </div>
+                      </div>
+                  <div class="row">
+                  <div class="col-md-12">
+                      <button type="button" [disabled]="form.invalid" class="btn btn-primary pull-right" (click)="onCreateAgentSubmit(form)"> <i *ngIf="createAgentLoader" class="fa fa-spinner fa-spin"></i> Submit</button>
+                  </div>
+                  </div>
+              </form>
+          </div>
+      </ng-template>
   </section>
 </div>
