--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
@@ -181,7 +181,10 @@ ul.super-sub li:hover{background: #e1e3e9;}
         max-height: 200px;
     }
 }
-
+.docImage {
+  height: 200px;
+  width: 200px;
+}
 
 
 
