added transfer timeout

--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -219,7 +219,21 @@
                   </div>
                 </div>
 
-
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="control-label" for="timeout">
+                      Transfer Timeout
+                    </label>
+                    <input type="text"
+                           class="form-control"
+                           id="timeout"
+                           name="timeout"
+                      [ngModel]="widget.transferTimeout"
+                      #transferTimeout="ngModel"
+                           placeholder="Please put a timout in 00:00 format"
+                    >
+                  </div>
+                </div>
               </div>
 
               <div class="row">
