--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.css
@@ -186,8 +186,21 @@ ul.super-sub li:hover{background: #e1e3e9;}
   width: 200px;
 }
 
+.chat-notification {
+  display: inline-block;
+  text-align: center;
+  margin-left: 500px;
+  padding: 15px;
+
+}
 
 
+@media screen and (max-width:764px) {
+  .chat-notification {
+    display: inline-block;
+    text-align: center;
+    margin-left: 10px !important;
+    padding: 15px;
 
-
-
+  }
+}
