--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -766,7 +766,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row" *ngIf="editMode">
+              <div class="row" *ngIf="editMode && !isBuyNumber">
                 <div class="col-md-6">
                   <div class="form-group">
                     <label class="control-label" for="numbers">
