fix incoming chat

--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -83,7 +83,8 @@
                                                     <div class="direct-chat-msg"
                                                          [ngClass]="{ right: chat.direction == 2 }"
                                                          *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
-                                                      <div *ngIf="chat.direction === 1 || chat.direction === 2">
+                                                      {{ chat | json }}
+                                                      <div *ngIf="chat.direction === '1' || chat.direction === '2'">
                                                         <div class="direct-chat-info clearfix">
                                                             <span class="direct-chat-name"
                                                                   [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
