--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -83,16 +83,15 @@
                                                     <div class="direct-chat-msg"
                                                          [ngClass]="{ right: chat.direction == 2 }"
                                                          *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
-                                                      {{ chat | json }}
-                                                      <div *ngIf="chat.direction === '1' || chat.direction === '2'">
+                                                      <div *ngIf="chat.direction === 1 || chat.direction === 2 || chat.direction === '1' || chat.direction === '2'">
                                                         <div class="direct-chat-info clearfix">
                                                             <span class="direct-chat-name"
-                                                                  [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
+                                                                  [ngClass]="chat.direction == 2 || chat.direction === '2' ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
                                                             <span class="direct-chat-timestamp"
-                                                                  [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'"> {{chat.created_at.date | amFromUtc | amLocal | amTimeAgo }} </span>
+                                                                  [ngClass]="chat.direction == 1 || chat.direction === '1' ? 'pull-right' : 'pull-left'"> {{chat.created_at.date | amFromUtc | amLocal | amTimeAgo }} </span>
                                                         </div>
                                                         <img class="direct-chat-img"
-                                                             [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'"
+                                                             [src]="chat.direction == 2 || chat.direction === '2' ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'"
                                                              alt="Message User Image"><!-- /.direct-chat-img -->
                                                         <div class="direct-chat-text">
                                                           <div *ngIf="chat.isMMS">
@@ -114,7 +113,7 @@
                                                             {{chat.message}}
                                                         </div>
                                                       </div>
-                                                      <div class="chat-notification" *ngIf="chat.direction==4">
+                                                      <div class="chat-notification" *ngIf="chat.direction === 4 || chat.direction === '4'">
                                                         <div class="row">
                                                           <b> {{ chat.message }} </b>
                                                         </div>
