Fix loader button

--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,6 +1,5 @@
-<router-outlet></router-outlet>
-
-<sjs-spinner [radius]="25" [lines]="15" [width]="8" [length]="15" [opacity]="0.9" [shadow]="true"></sjs-spinner>
-
+<router-outlet>
+  <sjs-spinner></sjs-spinner>
+</router-outlet>
 <app-alert *ngIf="(alertState | async).show" [text]="(alertState | async).message" [type]="(alertState | async).type"></app-alert>
 
