--- a/src/app/core/shared/spinner/spinner.component.html
+++ b/src/app/core/shared/spinner/spinner.component.html
@@ -1,1 +1,5 @@
-<div class="ng2-spinner" [style.display]="show == true ? 'inherit' : 'none'"></div>
+<div [style.display]="show == true ? 'inherit' : 'none'">
+  <div class="loadingDiv">
+    <img src="../../../../assets/img/loading.gif"/>
+  </div>
+</div>
