--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
@@ -151,8 +151,10 @@
                     <span class="product-description">
                       {{contact.room}} - {{contact.chatTime.date | amFromUtc | amLocal | amTimeAgo}}
                     </span>
-                    <span *ngIf="contact.transferInfo">
-                      Transfer By : {{contact.transferInfo}}
+                    <span >
+                      <span *ngIf="contact.transferInfo !== ''">
+                        Transfer By : {{contact.transferInfo}}
+                      </span>
                     </span>
                   </div>
                   <div class="button-box">
